Fri Feb  7 09:53:09 1997  Laurent Pautet  <pautet@lglsun11.epfl.ch>

	* config.sdefault: Break S1, S2 and S3 declaration lines.

	* xe_usage.adb: gnatmake -l has been changed into -M. Propagates
 	this change to gnatdist.

Wed Feb  5 17:32:57 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* make-ada-dir: New file used to track what's needed in dist1.

	* Makefile.am: Added -a to gnatmake flags to allow the use of our
	  own library.

Wed Jan 22 16:18:13 1997  Laurent Pautet  <pautet@scapin.enst.fr>

	* xe_check.adb: Get rid of debugging information.

	* xe_build.adb : Use of new version of Gnatmake.

	* xe_back.adb: Fix a bug that didn't occur until 3.09w.
	  The first host used to be a dummy host, but was no longer
	  used. This incorrect host was causing the current bug.
	
Thu Dec 19 23:12:41 1996  Laurent Pautet  <pautet@scapin.enst.fr>

	* xe-gcc-filter.in: Get rid of some generated pieces of
	code in client stubs.

Thu Dec 19 13:46:57 1996  Samuel Tardieu  <sam@inf.enst.fr>

	* xe-gcc-filter.in: Changed bogus test.
	Changed RCI_Info into System.Partition_Interface.RCI_Info.

Mon Dec 16 16:45:08 1996  Laurent Pautet  <pautet@scapin.enst.fr>

	* xe-gcc-filter.in: Compatibility test (do we use gnat >= 3.09w).

Sat Nov 30 20:21:47 1996  Laurent Pautet  <pautet@quasimodo.enst.fr>

	* xe_stubs.adb, xe_utils.ads, xe_utils.adb: Change DSA
 	hierarchy. dsa/private contains stubs (as caller and receiver can
 	designate a configuration name or a partition
 	name). dsa/<configuration>/<partition> contains all the files (or
 	links) to build a partition. Move compilation of s-garela into
	Build_Partition to keep consistent. Check that s-garela is
	up-to-date and recompile when Force_Compilation is set.

Fri Nov 29 16:13:41 1996  Laurent Pautet  <pautet@quasimodo.enst.fr>

	* xe_parse.adb: Incorrect Cut/Paste.

Fri Nov 29 12:40:47 1996  Laurent Pautet  <pautet@scapin.enst.fr>

	* xe.ads, xe.adb, xe_parse.adb, xe_stubs.adb, xe_back.adb: Add a