@@ -149,11 +149,22 @@ package body XE is
    -- Maybe_Most_Recent_Stamp --
    -----------------------------
 
-   procedure Maybe_Most_Recent_Stamp (Stamp : Time_Stamp_Type) is
+   procedure Maybe_Most_Recent_Stamp
+     (Stamp : Time_Stamp_Type;
+      File  : File_Name_Type) is
    begin
       if First_Stamp or else Stamp > Most_Recent_Stamp then
          First_Stamp := False;
          Most_Recent_Stamp := Stamp;
+         if Debug_Mode then
+            Write_Program_Name;
+            Write_Str (": ");
+            Write_Name (File);
+            Write_Str (" is more recent than ");
+            Write_Name (Most_Recent_File);
+            Write_Eol;
+         end if;
+         Most_Recent_File  := File;
       end if;
    end Maybe_Most_Recent_Stamp;
 
